# zero-bin

./: .env  Cargo.toml  leader.Dockerfile
.github/workflows/: docker_build_push.yml  docker_utils.yml
common/src/prover_state/: circuit.rs  mod.rs  persistence.rs
leader/src/: jerigon.rs
rpc/src/: rpc.rs
tools/: debug_block.sh  prove_blocks.sh
verifier/: Cargo.toml
verifier/src/: cli.rs  main.rs
