[workspace]
members = ["leader", "worker", "common", "ops", "verifier", "rpc", "prover"]
resolver = "2"

[workspace.dependencies]
paladin-core = "0.4.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.183"
plonky_block_proof_gen = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder.git", rev = "417a4d253a2dc31884b6c3cf0489fc66fdbdcdb2" }
protocol_decoder = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder.git", rev = "417a4d253a2dc31884b6c3cf0489fc66fdbdcdb2" }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "30b47998262642be54da5acf03dfca31af4d93f7" }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "30b47998262642be54da5acf03dfca31af4d93f7" }
serde_path_to_error = "0.1.14"
serde_json = "1.0.108"
ethereum-types = "0.14.1"
thiserror = "1.0.50"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPolygonZero/zero-bin"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography::cryptocurrencies"]

[profile.release]
opt-level = 3
incremental = true
lto = "fat"
codegen-units = 1
